--- a/preamble.tex
+++ b/preamble.tex
@@ -263,6 +263,7 @@
 \declaretheorem[style=thmbluebox, name=Påstand, numberlike=mycounter]{claim}
 \declaretheorem[style=thmbluebox, name=Eksempel, numberlike=mycounter]{example}
 \declaretheorem[style=thmbluebox, name=Opgave, numberlike=mycounter]{exercise}
+\declaretheorem[style=thmbluebox, name=Bemærkning, numberlike=mycounter]{remark}
 \declaretheorem[style=thmbluebox, name=Note, numberlike=notecounter]{note}
 
 
